trying to fix projects on mobile

--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -14,3 +14,10 @@
     float: left;
  }
 }
+
+@media (max-width: 700px) {
+ .iframe-mobile {
+     max-width: 50%;
+    max-height: 500px;
+ }
+}
